--- a/MODULO-II/[5]_Python_UTEC_101224.ipynb
+++ b/MODULO-II/[5]_Python_UTEC_101224.ipynb
@@ -1357,15 +1357,18 @@
         "\n",
         "l_dc_2_0 = list(l_dc_2[0])\n",
         "print(f\"\\nLa nueva lista creada es {l_dc_2_0}\")\n",
-        "print(f\"\\nLa nueva lista creada es {l_dc_2_0}\")\n",
-        "# Y vamos a renombrar al primer elemento de nueva lista en \"xx\" en vez de \"a\""
+        "print(f\"La nueva lista creada es del tipo {type(l_dc_2_0)}\")\n",
+        "\n",
+        "# Y vamos a renombrar al primer elemento de nueva lista en \"xx\" en vez de \"a\"\n",
+        "l_dc_2_0[0] = \"xx\"\n",
+        "print(f\"\\nLa nueva lista actualizada es {l_dc_2_0}\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "J_Y34P-Ngdpe",
-        "outputId": "78cb6610-268e-4267-bb5f-ee7459a447b6"
+        "outputId": "6d1bd66a-9ce4-4421-f299-df1cda67d3bb"
       },
       "execution_count": null,
       "outputs": [
@@ -1379,7 +1382,494 @@
             "El primer elemento de la nueva lista es ('a', {'x': 100})\n",
             "El tipo de dato del primer elemento de la nueva lista es <class 'tuple'>\n",
             "\n",
-            "La nueva lista creada es ['a', {'x': 100}]\n"
+            "La nueva lista creada es ['a', {'x': 100}]\n",
+            "La nueva lista creada es del tipo <class 'list'>\n",
+            "\n",
+            "La nueva lista actualizada es ['xx', {'x': 100}]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Método clear()"
+      ],
+      "metadata": {
+        "id": "ogSMt8cllaY9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%whos"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pYRX2vjijN_Y",
+        "outputId": "c6b169be-ffb4-4051-a6a2-a4ef7cb5d334"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Variable     Type          Data/Info\n",
+            "------------------------------------\n",
+            "c            str           andrea\n",
+            "dc_0         dict          n=0\n",
+            "dc_1         dict          n=3\n",
+            "dc_2         dict          n=3\n",
+            "dc_2_ele2    list          n=3\n",
+            "dc_3         dict          n=2\n",
+            "dc_4         dict          n=3\n",
+            "dc_5         dict          n=5\n",
+            "dict_info    dict          n=4\n",
+            "items_dc_1   dict_items    dict_items([('a', 1), ('b', 2), ('c', 3)])\n",
+            "l_0          list          n=0\n",
+            "l_dc_2       list          n=3\n",
+            "l_dc_2_0     list          n=2\n",
+            "l_dc_5       list          n=5\n",
+            "t_0          tuple         n=0\n",
+            "v            int           50\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"El diccionario con información personal es \\n{dict_info}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ntvm665TlkwO",
+        "outputId": "54246886-ee73-405b-fa62-13f772041de7"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El diccionario con información personal es \n",
+            "{'nombre': 'Michael', 'apellido': 'Añazco', 'edad': 24, 'profesion': 'Ingeniero Industrial'}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dict_info.clear()\n",
+        "print(f\"El diccionario con información personal es \\n{dict_info}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JK2sPbCCltSw",
+        "outputId": "9d064c0d-7f07-4f29-be95-cb9472a63d2c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El diccionario con información personal es \n",
+            "{}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"El diccionario 'dc_3' es \\n{dc_3}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Qmwdb8Orl14-",
+        "outputId": "d1e62060-32ca-4ef7-fa18-c4b6a8271ef2"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El diccionario 'dc_3' es \n",
+            "{'a': 300, 'b': 200}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Crear al diccionario 'referencia'\n",
+        "referencia = dc_3\n",
+        "print(f\"El diccionario referencia es \\n{referencia}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Su_iug2GmOgY",
+        "outputId": "4d3ea8ce-3077-4bfa-d37c-63fa4ea87ce2"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El diccionario referencia es \n",
+            "{'a': 300, 'b': 200}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dc_3.clear()"
+      ],
+      "metadata": {
+        "id": "HQtqCLB-mcli"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"El diccionario 'dc_3' es \\n{dc_3}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PmtmpEikmyyL",
+        "outputId": "4ab304d5-8009-4d9a-e6f9-8821086b4f4f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El diccionario 'dc_3' es \n",
+            "{}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"El diccionario referencia es \\n{referencia}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YbuGzlcbm1Et",
+        "outputId": "ba1acd37-dae8-4d92-a049-1a4fde67da4a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El diccionario referencia es \n",
+            "{}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Método keys()"
+      ],
+      "metadata": {
+        "id": "03iRQ6gWnHYs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Crear un diccionario\n",
+        "\n",
+        "dic_prod = {\n",
+        "    \"detergente\":70,\n",
+        "    \"arroz\": 20,\n",
+        "    \"aceite\":10\n",
+        "}\n",
+        "\n",
+        "print(f\"El diccionario de productos es \\n{dic_prod}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6sVAJQlem7Je",
+        "outputId": "e424acd8-da13-49b5-e0b9-45806ad09f50"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El diccionario de productos es \n",
+            "{'detergente': 70, 'arroz': 20, 'aceite': 10}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dic_prod.keys()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7-jVJjtGnica",
+        "outputId": "f7a508a4-1795-4bbf-f2bc-679015de5a7e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_keys(['detergente', 'arroz', 'aceite'])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 89
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "l_dic_prod_keys = list(dic_prod.keys())\n",
+        "print(f\"La lista de claves del diccionario productos \\n{l_dic_prod_keys}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AdzjPzBmnutF",
+        "outputId": "0e086829-d32f-4f4c-ae6c-dc4a0d0999ef"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La lista de claves del diccionario productos \n",
+            "['detergente', 'arroz', 'aceite']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for c in dic_prod.keys():\n",
+        "  print(f\"La clave es {c}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zKOJBoC0oKyG",
+        "outputId": "3ff67350-4984-4a9e-aebe-2a96c1976299"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La clave es detergente\n",
+            "La clave es arroz\n",
+            "La clave es aceite\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for c in l_dic_prod_keys:\n",
+        "  print(f\"La clave es {c}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qKL_0Vz8oZjP",
+        "outputId": "02d73ccd-41f2-4e30-b4ae-46f4e4596646"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La clave es detergente\n",
+            "La clave es arroz\n",
+            "La clave es aceite\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prod = 'aceite'\n",
+        "\n",
+        "if prod in dic_prod.keys():\n",
+        "  print(f\"El producto {prod} existe en el diccionario.\")\n",
+        "else:\n",
+        "  print(f\"El producto {prod} no existe en el diccionario\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Uz6OZXc2olN1",
+        "outputId": "ecb638ec-b5d6-493f-d696-dca0b446b1bb"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El producto aceite existe en el diccionario.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prod = 'gaseosa'\n",
+        "\n",
+        "if prod in dic_prod.keys():\n",
+        "  print(f\"El producto {prod} existe en el diccionario.\")\n",
+        "else:\n",
+        "  print(f\"El producto {prod} no existe en el diccionario\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5XjOYcN1pN7c",
+        "outputId": "b6f9a830-3201-4ac6-a100-157fd77bdbb7"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El producto gaseosa no existe en el diccionario\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "claves_dic_prod = dic_prod.keys()\n",
+        "print(f\"Las claves del diccionario productos son \\n{claves_dic_prod}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tOAPc-J_pUaW",
+        "outputId": "7b46917b-3d07-4b36-8225-59eea96de133"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Las claves del diccionario productos son \n",
+            "dict_keys(['detergente', 'arroz', 'aceite'])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dic_prod[\"cereal\"] = 15 # actualizo el diccionario\n",
+        "for c in dic_prod.keys():\n",
+        "  print(f\"La clave es {c}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S_v8uj7Wpynm",
+        "outputId": "511e9b03-237b-4ac4-f3c5-30eaca754745"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La clave es detergente\n",
+            "La clave es arroz\n",
+            "La clave es aceite\n",
+            "La clave es cereal\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"Las claves del diccionario productos son \\n{claves_dic_prod}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LWU5qonhqNr4",
+        "outputId": "135c7adf-96b6-43ee-8bba-5b880392a276"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Las claves del diccionario productos son \n",
+            "dict_keys(['detergente', 'arroz', 'aceite', 'cereal'])\n"
           ]
         }
       ]
@@ -1388,7 +1878,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "pYRX2vjijN_Y"
+        "id": "T9euCP3oqZi4"
       },
       "execution_count": null,
       "outputs": []
